fix: optimize mobile alignment and disable zooming

--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,14 @@
   overflow-x: hidden;
 }
 
+html,
 body {
   margin: 0;
   padding: 0;
   background-color: var(--color-light-bg);
+  width: 100%;
+  overflow-x: hidden;
+  position: relative;
 }
 
 * {
